# autoware_melex

./: .aderc-development  .aderc-melex  .gitignore  README.md  autoware_melex.repos
docker/: Dockerfile.melex  README.md  build.sh  remote_python3
drivers/melex_ros2_ouster/: CMakeLists.txt  README.md  package.xml
drivers/melex_ros2_ouster/launch/: driver_launch.py  os1_launch.py
drivers/melex_ros2_ouster/params/: driver_config.yaml  os1.yaml
launch/melex_autoware_auto_launch/: CMakeLists.txt  README.md  package.xml
launch/melex_autoware_auto_launch/config/: avp.rviz
launch/melex_autoware_auto_launch/launch/: autoware_auto_visualization.launch.py
launch/melex_autoware_demos/: CMakeLists.txt  README.md  package.xml
launch/melex_autoware_demos/data/: put_a8_parking.osm  put_a8_parking.pcd  put_a8_parking.yaml
launch/melex_autoware_demos/launch/: avp_core.launch.py  avp_vehicle.launch.py
launch/melex_autoware_demos/param/: lanelet2_map_provider.param.yaml
mapping/melex_ndt_mapping_nodes/: CMakeLists.txt  README.md  package.xml
mapping/melex_ndt_mapping_nodes/config/: melex_mapping.rviz
mapping/melex_ndt_mapping_nodes/launch/: ndt_mapper.launch.py
perception/filters/melex_point_cloud_filter_transform_nodes/: CMakeLists.txt  README.md  package.xml
tools/melex_autoware_auto_avp_demo/: CMakeLists.txt  README.md  package.xml
tools/melex_path_projection_node/: CMakeLists.txt  package.xml
tools/melex_path_projection_node/launch/: path_projection.launch.py
urdf/melex_description/: CMakeLists.txt  README.md  package.xml
(+7 files in other folders)
