<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>melex_ndt_mapping_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="amadeusz.szymko@put.poznan.pl">Amadeusz Szymko</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_auto_cmake</buildtool_depend>

  <depend>ndt_mapping_nodes</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
